--- a/Raycast-Engine/imgui.ini
+++ b/Raycast-Engine/imgui.ini
@@ -1,5 +1,15 @@
 [Window][Debug##Default]
-Pos=701,223
+Pos=461,223
 Size=264,92
+Collapsed=0
+
+[Window][Sample window]
+Pos=60,60
+Size=157,100
+Collapsed=0
+
+[Window][Hello, world!]
+Pos=14,26
+Size=419,136
 Collapsed=0
 
