--- a/Raycast-Engine/imgui.ini
+++ b/Raycast-Engine/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=461,223
+Pos=308,111
 Size=264,92
 Collapsed=0
 
@@ -9,7 +9,17 @@ Size=157,100
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=14,26
-Size=419,136
+Pos=23,13
+Size=136,52
+Collapsed=0
+
+[Window][Debug]
+Pos=8,69
+Size=129,45
+Collapsed=0
+
+[Window][a]
+Pos=60,60
+Size=86,166
 Collapsed=0
 
